Revision history for Perl module WebService::PayPal::NVP

0.003 2015-10-01
 - Using ExtUtils::MakeMaker now
 - Converted readme to markdown
 - Fixed typo in pod (Olaf Alders)
 - Add create_recurring_payments_profile(),
   manage_recurring_payments_profile_status(), mass_pay() and
   refund_transaction() methods (Olaf Alders)
 - Thanks for the new methods, Olaf!

0.002 2013-09-26

0.001 2013-09-23
 - First version, released on an unsuspecting world.